# This file is part of GNU Radius.
# Copyright (C) 2000,2001,2002,2003,2004,2007 Free Software Foundation, Inc.
#
# Written by Sergey Poznyakoff
#
# GNU Radius is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# GNU Radius is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radius; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

EXTRA_DIST = \
 rfc1157.txt\
 rfc1448.txt\
 rfc1901.txt\
 rfc1905.txt\
 rfc2138.txt\
 rfc2433.txt\
 rfc2548.txt\
 rfc2618.txt\
 rfc2619.txt\
 rfc2620.txt\
 rfc2621.txt\
 rfc2759.txt\
 rfc2865.txt\
 rfc2866.txt\
 rfc2867.txt\
 rfc2868.txt\
 rfc2869.txt\
 rfc2882.txt\
 rfc3575.txt
